--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
             <li><a class="dropdown-item" href="#">Software Engineering</a></li>
           </ul>
         </li>
-		  <li class="nav-item">
+		  <li class="navbar-brand">
           <a class="nav-link active" aria-current="page" href="#">News & Commentary</a>
         </li>
       </ul>
